namespace java ru.nkz.ivcgzo.thriftOsm

include "../../../common/thrift/kmiacServer.thrift"

service ThriftOsm extends kmiacServer.KmiacServer {
}
